--- a/example/index.html
+++ b/example/index.html
@@ -19,7 +19,8 @@
 		<p id="one-item"></p>
 		<p id="more-items"></p>
 		<p id="multi-items">{items, plural, none{No devices found} one{found 1 device} other{found {items} devices}} in {rooms, plural, one{one room} other{{rooms} rooms}}</p>	
-		
+		<hr/>
+        <p id="hello">Hello</p> 
 		<script>(function(){
 		    // define mode develop/build
 		    var mode = document.getElementsByTagName('html')[0].getAttribute('data-mode');
